styles/Services.module.scss
@import './Mixins.scss';

@mixin column {
	display: flex;
	flex-direction: column;
}

.container__wide {
	margin-top: 5px;
	padding: 0px 2rem;

	@media only screen and (max-width: 768px) {
		padding: 15px;
	}
}

.container {
	display: flex;
	position: relative;
	padding: 5px 30px;
	margin-top: 65px;
	margin-bottom: 20px;
	width: 100%;

	@media (max-width: 1400px) {
		padding: 10px 20px;
	}

	@media (max-width: 768px) {
		padding: 5px 10px;
		margin-bottom: 20px;
	}
}

b.bold {
	font-weight: 600;
}

.mainColumn {
	@include column;
	@include card;
	font-size: 15px;
	line-height: 1.3;
	width: 100%;
	z-index: 0;
	position: relative;

	@media only screen and (min-width: 767px) {
		padding-bottom: 15px;
	}

	&__wrapper {
		display: flex;
		flex-direction: column;
		padding: 5px 0 500px 25px;
		width: calc(84% - 40px);

		@media (max-width: 1400px) {
			padding: 5px 0 500px 15px;
		}
		@media (max-width: 1024px) {
			width: 75%;
		}
		@media (max-width: 768px) {
			width: 100%;
			padding: 0 0 15px;
			font-size: 14px;
		}

		a,
		p,
		span {
			font-size: 15px;
			@media (max-width: 1600px) {
				font-size: 14px;
			}
		}
	}

	&::-webkit-scrollbar {
		width: 8px;
	}

	&::-webkit-scrollbar-track {
		background-color: transparent;
		border-radius: 10px;
	}

	&::-webkit-scrollbar-thumb {
		border-radius: 10px;
		background-color: rgba(153, 153, 153, 0.5);
	}

	ul {
		margin: 10px 0 5px;
	}

	a,
	p,
	span {
		font-size: 16px;
		@media (max-width: 1400px) {
			font-size: 14px;
		}
	}

	span {
		margin-block: 3px;
		&::-webkit-scrollbar-thumb {
			background: #98989894;
			border-radius: 12px;
			max-height: 40px;
		}

		&::-webkit-scrollbar {
			height: 6px;
		}
	}

	p {
		width: 100%;
		margin: 4px 0 3px;

		@media (max-width: 768px) {
			width: 100%;
			font-size: 13px;
		}
	}

	h1,
	h2,
	h3 {
		z-index: -1;
	}

	h1 {
		display: block;
		font-size: 38px;
		font-weight: 900;
		width: fit-content;

		@media (max-width: 1600px) {
			font-size: 34px;
		}
		@media (max-width: 768px) {
			font-size: 25px;
			padding-top: 25px;
			margin-top: 0;
		}
	}

	h2 {
		display: block;
		font-size: 32px;
		text-decoration: underline;
		text-underline-offset: 0.1em;
		text-decoration-color: #2982e7;
		padding-top: 95px;
		margin: -70px 0px 10px;
		font-weight: 700;
		width: fit-content;

		@media (max-width: 1600px) {
			font-size: 30px;
		}
		@media (max-width: 1024px) {
			font-size: 28px;
		}

		@media (max-width: 768px) {
			font-size: 25px;
			padding-top: 25px;
			margin-top: 0;
		}

		&:first-of-type {
			padding-top: 108px;
			margin: -100px 0 10px;

			@media (max-width: 768px) {
				padding-top: 5px;
				margin: 0 0 10px;
			}
		}
	}

	h3 {
		padding: 70px 0 0;
		margin-top: -60px;
		font-size: 18px;

		@media (max-width: 1600px) {
			font-size: 16px;
		}
	}

	a {
		color: #2982e7;
		font-weight: 400;
		text-decoration: none;

		@media (max-width: 768px) {
			font-size: 14px;
		}
	}

	ul {
		padding-left: 1.5em;
		list-style: none;

		li {
			list-style: circle;
			position: relative;
			margin-top: 0.1em;
			margin-bottom: 0.25em;

			&::marker {
				display: none;
			}
		}

		@media (max-width: 768px) {
			padding-left: 1em;
		}
	}

	code {
		color: inherit !important;
		background-color: inherit !important;
	}
}

.w_fit {
	width: fit-content !important;
}

.sideColumn {
	@include card;
	margin-top: 10px;
	padding: 10px 15px 20px 15px;
	position: relative;
	width: calc(16% + 40px);
	z-index: 100;

	@media (max-width: 1450px) {
		padding: 10px 0px 15px 10px;
	}
	@media (max-width: 1024px) {
		width: 25%;
	}
	@media (max-width: 768px) {
		display: none;
	}
}

.anchor__wrapper {
	max-height: 50vh;
	width: 130px !important;
	padding: 5px 12px;
	font-size: 12px;

	@media (max-width: 1023px) {
		display: none;
	}
}

.dot {
	display: inline-block;
	width: 12px;
	height: 12px;
	border-radius: 50%;
}

.active {
	background-color: rgb(78, 220, 53);
	animation: pulse-green 2s infinite;

	@keyframes pulse-green {
		0% {
			transform: scale(0.95);
			box-shadow: 0 0 0 0 rgba(78, 220, 53, 0.7);
		}

		70% {
			transform: scale(1);
			box-shadow: 0 0 0 8px rgba(78, 220, 53, 0);
		}

		100% {
			transform: scale(0.95);
			box-shadow: 0 0 0 0 rgba(78, 220, 53, 0);
		}
	}
}

.pending {
	background-color: rgb(134, 134, 134);
}

.inactive {
	background-color: rgb(220, 53, 53);
	animation: pulse-red 2s infinite;

	@keyframes pulse-red {
		0% {
			transform: scale(0.95);
			box-shadow: 0 0 0 0 rgba(220, 53, 53, 0.7);
		}

		70% {
			transform: scale(1);
			box-shadow: 0 0 0 8px rgba(78, 220, 53, 0);
		}

		100% {
			transform: scale(0.95);
			box-shadow: 0 0 0 0 rgba(78, 220, 53, 0);
		}
	}
}

.text_secondary {
	margin: 2px 0 10px;
	color: #838383;
}

.mainnetColumn {
	display: flex;
	flex-wrap: wrap;
	row-gap: max(10px, 1vw);
	column-gap: max(15px, 2vw);
	margin: 10px 0;
}

.mobileMenu {
	display: none;
	margin-bottom: 10px;

	@media (max-width: 768px) {
		display: block;
	}
}

.testnetColumn {
	display: flex;
	flex-wrap: wrap;
	row-gap: 20px;
	column-gap: max(15px, 1.5vw);
	margin: 10px 0;

	@media (max-width: 768px) {
		row-gap: 8px;
	}
}

p.desc {
	line-height: 1.3;

	@media (max-width: 768px) {
		font-size: 14px;
	}
}

.chain__wrapper {
	display: flex;
	align-items: center;
	gap: 12px;
	border: 1px solid rgba(150, 150, 150, 0.35);
	border-radius: 14px;
	padding: 6px 18px;
	cursor: pointer;
	transition: 0.2s !important;
	z-index: 10;

	@media (max-width: 768px) {
		padding: 5px 14px;
	}

	&:hover {
		background: rgba(224, 224, 224, 0.15);
		border: 1px solid rgba(150, 150, 150, 0.32);
	}

	img {
		background-color: #fff;
		border-radius: 50%;
	}
}

.kbd {
	text-align: center;
	box-sizing: border-box;
	line-height: 1.7;
	padding: 0.1rem 0.5rem;
	margin: 4px 6px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	border-radius: 4px;
	background: #fff;
	box-shadow: 0px 1px 0px 2px #ddd;
	position: relative;
}

.stats {
	display: flex;
	flex-wrap: wrap;
	gap: 35px;
	align-items: center;
	font-family: 'JetBrains Mono';
	line-height: 1.3;

	@media (max-width: 1300px) {
		gap: 20px;
		row-gap: 10px;
	}

	@media (max-width: 768px) {
		gap: 15px;
		row-gap: 8px;
	}

	&__name {
		font-weight: 500;
		font-size: 17px !important;
		@media (max-width: 1600px) {
			font-size: 16px !important;
		}
	}

	span {
		font-size: 15px;

		@media (max-width: 768px) {
			row-gap: 2px;
			font-size: 13px;
		}
	}
}

.projectInfoCard {
	@include card;
	position: sticky;
	top: 2px;
	padding-block: 13px;
	border-color: rgba(101, 101, 109, 0.3);
	margin: 2px 0 10px;
	z-index: 10;

	@media (max-width: 768px) {
		position: relative;
		padding-block: 10px;
	}
}

.mobileSegmented {
	display: block;
	@media (min-width: 768px) {
		display: none !important;
	}
}

